--- a/vars/php.yml.dist
+++ b/vars/php.yml.dist
@@ -1,58 +1,20 @@
 php_versions:
-  - version: "5.4.45"
-    major_default: 5.4
-    modules:
-      - {name: "imagick"}
-      - {name: "memcache"}
 
-  - version: "5.5.38"
-    major_default: 5.5
-    modules:
-      - {name: "apcu", version: "4.0.11"}
-      - {name: "imagick"}
-      - {name: "memcache"}
-
-  - version: "5.6.37"
-    major_default: 5.6
-    modules:
-      - {name: "apcu", version: "4.0.11"}
-      - {name: "imagick"}
-      - {name: "memcache"}
-      - {name: "redis", version: "2.2.8"}
-      - {name: "xdebug", version: 2.5.5 }
-
-  - version: "7.0.32"
-    major_default: 7.0
-    modules:
-      - {name: "apcu", version: "5.1.8"}
-      - {name: "imagick"}
-      - {name: "redis", version: 3.1.4}
-      - {name: "xdebug", version: 2.5.5 }
-
-
-  - version: "7.1.24"
-    major_default: 7.1
-    modules:
-      - {name: "apcu", version: "5.1.8"}
-      - {name: "imagick"}
-      - {name: "redis", version: 3.1.4}
-      - {name: "xdebug", version: 2.5.5 }
-
-  - version: "7.2.12"
+  - version: "7.2.21"
     major_default: 7.2
     modules:
-      - {name: "apcu", version: "5.1.12"}
+      - {name: "apcu", version: "5.1.17"}
       - {name: "imagick"}
-      - {name: "redis", version: 4.1.0 }
-      - {name: "xdebug", version: 2.6.0 }
+      - {name: "redis", version: 5.0.2 }
+      - {name: "xdebug", version: 2.7.2 }
 
-  - version: "7.3.0"
+  - version: "7.3.8"
     major_default: 7.3
     modules:
-      - {name: "apcu", version: "5.1.14"}
+      - {name: "apcu", version: "5.1.17"}
       - {name: "imagick"}
-      - {name: "redis", version: 4.2.0 }
-      - {name: "xdebug", version: 2.7.0beta1 }
+      - {name: "redis", version: 5.0.2 }
+      - {name: "xdebug", version: 2.7.2 }
 
 
-default_php: "{{ (php_versions|last).version }}"
+default_php: 7.2.21
