--- a/roles/pma/templates/nginx.conf
+++ b/roles/pma/templates/nginx.conf
@@ -5,6 +5,9 @@ server {
     root {{ pma_directory }};
     index index.php;
 
+    access_log /var/log/nginx/pma-access.log;
+    error_log /var/log/nginx/pma-error.log;
+
     location ~* \.(ico|css|js)(\?[0-9]+)?$ {
         expires max;
         log_not_found off;
