--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -18,6 +18,8 @@
       - libmysqlclient-dev
       - libzip-dev
       - libsodium-dev
+      - libsqlite3-dev
+      - libonig-dev
     state: present
 
 - import_tasks: openssl.yml
