--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -29,8 +29,12 @@
   register: phpfarm_file
   check_mode: no
 
-- git: repo=https://github.com/fpoirotte/phpfarm.git dest=/opt/phpfarm depth=1
-  when: phpfarm_file.stat.exists == False
+- name: Clone phpfarm repository
+  git:
+    repo: https://github.com/fpoirotte/phpfarm.git
+    dest: /opt/phpfarm
+    depth: 1
+    update: yes
 
 - name: Create phpfarm custom settings directory
   file: path=/opt/phpfarm/custom state=directory
