Add newer mariadb repository

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,13 +1,6 @@
-- name: Add apt key for 10.1
-  become: true
-  apt_key:
-    id: '0xF1656F24C74CD1D8'
-    keyserver: keyserver.ubuntu.com
-    state: present
-
 - name: Add repository for Debian
   become: true
-  apt_repository: filename=mariadb repo="deb [arch=amd64] http://ftp.utexas.edu/mariadb/repo/{{ mariadb_version }}/ubuntu {{ ansible_distribution_release }} main" state=present update_cache=yes
+  apt_repository: filename=mariadb repo="deb [arch=amd64] https://mirror1.cl.netactuate.com/mariadb/repo/{{ mariadb_version }}/ubuntu {{ ansible_distribution_release }} main" state=present update_cache=yes
 
 - name: Check if mariadb is installed
   command: "dpkg -s mariadb-server-{{ mariadb_version }}"
